# fx-histdata-fetch

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: __main__.py  download_all_fx_data.py  download_usdeur_fx_data.py
src/histdata/: __init__.py  api.py  domain.py
