[project]
name = "FX-HISTORY-DATA"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    {name = "Jean Auger", email = "jean.auger.42@gmail.com"},
    {name = "Philippe Rémy", email = ""},
]
dependencies = [
    "requests>=2.20.0",
    "beautifulsoup4>=4.6.0",
    "typer>=0.9.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
